--- a/src/app/dine/floor/floor.component.html
+++ b/src/app/dine/floor/floor.component.html
@@ -83,3 +83,6 @@
     (cellClicked)="onCellClick($event)"
     />
 
+ <div >
+    <app-popupmodel (deletedconfirmedclicked)="deletedConfirmed($event)" (clicked)="handleChildClick()" [style]="display" [tabname]="tablename" [data]="valueid" [modal]="modal"></app-popupmodel>
+  </div>
