--- a/src/app/manage/tax/tax.component.html
+++ b/src/app/manage/tax/tax.component.html
@@ -88,5 +88,5 @@
   />
 
   <div >
-    <app-popupmodel (deletedconfirmedclicked)="deletedConfirmed($event)" (clicked)="handleChildClick()" [style]="display" [tabname]="tablename" [data]="" [modal]="modal"></app-popupmodel>
+    <app-popupmodel (deletedconfirmedclicked)="deletedConfirmed($event)" (clicked)="handleChildClick()" [style]="display" [tabname]="tablename" [data]="valueid" [modal]="modal"></app-popupmodel>
   </div>
