--- a/src/app/inventory/inventoryMainFood/inventorymainfood.component.html
+++ b/src/app/inventory/inventoryMainFood/inventorymainfood.component.html
@@ -26,7 +26,7 @@ quantitytypevalue: -->
           <div class="col"><label class="lbl" for="quantitytypeID" id="quantitytypeID">Select Quntity Type :</label>
         </div>
         <div class="col">
-          <select class="lbl" formControlName="quantitytypeID" (change)="getqtname()">
+          <select class="lbl" formControlName="quantitytypeID" (change)="getInventoryFoodQuantityTypeName()">
             @for (d of inventoryQuantityTypeData$ | async; track d) {
               <option class="lbl" value="{{d._id}}">{{d.name}}</option>
             }
@@ -36,7 +36,7 @@ quantitytypevalue: -->
       @if (quantitytypename!='') {
         <div class="form-group row"  >
           <div class="col">  <label class="lbl" for="quantitytypename" id="quantitytypename" > Quantity Type Name :</label></div>
-          <div class="col">  <input class="lbl" type="button"  id="quantitytypenametxt" ngModel="{{quantitytypename}}" formControlName="quantitytypename"/></div>
+          <div class="col">   <label class="lbl"  id="quantitytypename" formControlName="quantitytypename">{{quantitytypename}}</label></div>
         </div>
       }
       @if (quantitytypename!='') {
@@ -68,16 +68,16 @@ quantitytypevalue: -->
           <div class="col"> <input style="width: 114px; margin: 3px;"  id="nametxt" type="text" formControlName="name"></div>
         </div>
         <div class="row form-group">
-          <div class="col"><label class="lbl" for="descriptiontxt" id="description" > Name :</label></div>
+          <div class="col"><label class="lbl" for="descriptiontxt" id="description" > Description :</label></div>
           <div class="col"><input style="width: 250px; margin: 3px;" type="text" id="descriptiontxt" formControlName="discription"></div>
         </div>
         <div class="form-group row">
           <div class="col"><label class="lbl" for="quantitytypeID" id="quantitytypeID">Select Quntity Type :</label>
         </div>
         <div class="col">
-          <select class="lbl" formControlName="quantitytypeID">
+          <select class="lbl" formControlName="quantitytypeID" (change)="getInventoryFoodQuantityTypeNameforEdit()">
             @for (d of inventoryQuantityTypeData$ | async; track d) {
-              <option class="lbl" value="{{d._id}}">{{d.name}}</option>
+              <option class="lbl" value="{{d._id}}" selected="">{{d.name}}</option>
             }
           </select>
         </div>
@@ -85,7 +85,7 @@ quantitytypevalue: -->
       @if (quantitytypename!='') {
         <div class="form-group row">
           <div class="col">  <label class="lbl" for="quantitytypenametxt" id="quantitytypename" >  Quantity Type Name :</label></div>
-          <div class="col">  <input class="lbl" type="button"  id="quantitytypenametxt" ngModel="{{quantitytypename}}" formControlName="quantitytypename"/></div>
+          <div class="col">   <label class="lbl"  id="quantitytypename" formControlName="quantitytypename">{{quantitytypename}}</label></div>
         </div>
       }
       @if (quantitytypename!='') {
