--- a/src/app/dashboard/order-diplay-in-pop-up/order-diplay-in-pop-up.component.html
+++ b/src/app/dashboard/order-diplay-in-pop-up/order-diplay-in-pop-up.component.html
@@ -1,6 +1,6 @@
 @if(showPopUp){
-  <div class=" comman">
-  
+  <div class="comman">
+  <div class="popupbox">
    <!-- Header -->
 <div class="flex justify-between bg-white items-center  from-white to-wheat-800 text-black font-semibold py-4 px-6 rounded shadow mb-0">
   <h2 class="text-xl font-bold">Invoice Details</h2>
@@ -65,5 +65,6 @@
   </ng-template>
 </div>
 
+    </div>
     </div>
 }
