--- a/src/app/dine/dine/dine.component.html
+++ b/src/app/dine/dine/dine.component.html
@@ -97,7 +97,7 @@
 
   <ag-grid-angular class="box ag-theme-quartz"
     style="height:500px;"
-    [rowData]="dinedata"
+    [rowData]="FloorWithDineData"
     [columnDefs]="colDefs"
     [pagination]="pagination"
     [paginationPageSize]="paginationPageSize"
