--- a/src/styles.css
+++ b/src/styles.css
@@ -17,23 +17,7 @@
 {
     border: solid rgb(212, 207, 216) 1px;
 }
-.comman {
-  position: fixed; /* fixed so it stays in view */
-  z-index: 5;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(23, 110, 45, 0.85);
-  
-  /* Center the box inside */
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  
-  /* Fade-in effect */
-  animation: fadeIn 0.3s ease-in-out;
-}
+
 
 .box {
   background: linear-gradient(135deg, #ffffff, #f0f4f9);
@@ -47,12 +31,42 @@
   /* Slight scale animation */
   /* animation: popUp 0.3s ease-out; */
 }
-
+.popupbox
+{
+   position: absolute; /* fixed so it stays in view */
+  z-index: 5;
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100% auto;
+  background-color: rgba(23, 110, 45, 0.85);
+  
+  /* Center the box inside */
+  align-items: center;
+  justify-content: center;
+  
+  /* Fade-in effect */
+}
 .comman * {
   margin: 3px 0;
   line-height: 1.4;
 }
-
+.comman {
+  position: fixed; /* fixed so it stays in view */
+  z-index: 5;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(164, 211, 176, 0.85);
+  /* Center the box inside */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* Fade-in effect */
+  /* animation: fadeIn 0.3s ease-in-out; */
+}
 /* Animations */
 @keyframes fadeIn {
   from { opacity: 0; }
