--- a/src/app/dashboard/order-diplay-in-pop-up/order-diplay-in-pop-up.component.html
+++ b/src/app/dashboard/order-diplay-in-pop-up/order-diplay-in-pop-up.component.html
@@ -36,7 +36,7 @@
   <h3 class="text-lg font-bold mb-2">Invoice Summary</h3>
   <div class="grid grid-cols-2 sm:grid-cols-3 gap-2 text-sm text-gray-800">
     <div><strong>Table:</strong> {{ EditOrderInvoice.tablename }}</div>
-    <div><strong>Total Items:</strong> ₹{{ EditOrderInvoice.TotalItemsAmount }}</div>
+    <div><strong>Total Items Amount:</strong> ₹{{ EditOrderInvoice.TotalItemsAmount }}</div>
     <div><strong>Tax:</strong> ₹{{ EditOrderInvoice.TotalTaxAmount }}</div>
     <div><strong>Total Value:</strong> ₹{{ EditOrderInvoice.Totalvaue }}</div>
     <div><strong>Grand Total:</strong> ₹{{ EditOrderInvoice.grandtotal }}</div>
