--- a/src/app/manage/tax/tax.component.html
+++ b/src/app/manage/tax/tax.component.html
@@ -34,7 +34,7 @@
       </div>
       <p>{{args}}</p>
       <div class="form-group row">
-        <div class="col"><div class="col"><button class="bt1n" type="submit"[disabled]="myAddForm.invalid">Add Category</button></div>
+        <div class="col"><div class="col"><button class="bt1n" type="submit"[disabled]="myAddForm.invalid">Add Tax</button></div>
       </div>
     </div>
   </form>
