--- a/src/app/dine/tables/tables.component.html
+++ b/src/app/dine/tables/tables.component.html
@@ -156,7 +156,7 @@
                 @if (d._id == runningorder_.Chairsrunningorder[0].table_id) {
                 <h6>{{d.name}}, Token: ({{runningorder_.tokennumber}})
 
-                  <h6 class="order-meta">{{runningorder_.createdAt}}</h6>
+                  <h6 class="order-meta">{{runningorder_.receiptnumber}}</h6>
                 </h6>
                 }
               </div>
@@ -164,12 +164,12 @@
             </div>
             } @else {
             <h6 class="order-text"><b>{{runningorder_.tablename}}, Token: ({{runningorder_.tokennumber}})</b></h6>
-            <h6 class="order-meta">{{runningorder_.createdAt}}</h6>
+            <h6 class="order-meta">{{runningorder_.receiptnumber}}</h6>
             }
             <div class="order-actions">
-              <button class="btn-danger" (click)="cancel(runningorder_.createdAt)">🗑️</button>
+              <button class="btn-danger" (click)="cancel(runningorder_.receiptnumber)">🗑️</button>
               <button class="btn-primary"
-                (click)="gotohome(runningorder_.createdAt,runningorder_.tokennumber)">Go</button>
+                (click)="gotohome(runningorder_.receiptnumber,runningorder_.tokennumber)">Go</button>
 
             </div>
           </div>
