--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -302,7 +302,8 @@
             <td class="px-4 py-2">{{ percent }}%</td>
           </tr>
           <tr class="font-bold text-green-700">
-            <td class="px-4 py-2">Discounted Total</td>
+            <!-- Discounted -->
+            <td class="px-4 py-2"> Total</td>
             <td colspan="3"></td>
             <td class="px-4 py-2">{{ discountvalue }}</td>
           </tr>
